[gd_scene load_steps=8 format=3 uid="uid://cvsd5el6t8wot"]

[ext_resource type="Script" path="res://Scripts/TestPlayer.gd" id="1_63lbd"]
[ext_resource type="AudioStream" uid="uid://b6ho5mwc4w2je" path="res://SFX/Pop.wav" id="2_hswqf"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_ryon3"]
albedo_color = Color(1, 0, 0, 1)

[sub_resource type="CapsuleMesh" id="CapsuleMesh_7ldhg"]
material = SubResource("StandardMaterial3D_ryon3")

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_7xyox"]

[sub_resource type="SphereMesh" id="SphereMesh_h8sw6"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_uycj7"]

[node name="TestPlayer" type="RigidBody3D" groups=["Player"]]
collision_mask = 7
lock_rotation = true
script = ExtResource("1_63lbd")

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
mesh = SubResource("CapsuleMesh_7ldhg")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
shape = SubResource("CapsuleShape3D_7xyox")

[node name="CPUParticles3D" type="CPUParticles3D" parent="."]
emitting = false
one_shot = true
explosiveness = 1.0
mesh = SubResource("SphereMesh_h8sw6")

[node name="Area3D" type="Area3D" parent="."]
transform = Transform3D(1.2, 0, 0, 0, 1.2, 0, 0, 0, 1.2, 0, 0, 0)

[node name="CollisionShape3D" type="CollisionShape3D" parent="Area3D"]
shape = SubResource("CapsuleShape3D_uycj7")

[node name="DeathTimer" type="Timer" parent="."]

[node name="AudioStreamPlayer3D" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource("2_hswqf")
unit_size = 2.67
max_distance = 157.54
attenuation_filter_db = -20.7

[connection signal="body_entered" from="Area3D" to="." method="_on_area_3d_body_entered"]
[connection signal="timeout" from="DeathTimer" to="." method="_on_death_timer_timeout"]
